--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/graph">
+    </LinearLayout>
 
 
+    <!--
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
@@ -91,5 +98,7 @@
                 android:minWidth="20pt" />
 
         </TableRow>
+
+    -->
 
     </TableLayout>
